--- a/team.html
+++ b/team.html
@@ -120,15 +120,16 @@
                             </ul>
                         </div>
                         <div class="col-md-4 col-xs-12">
-                            <h4>EMAIL</h4>
-                            <p class='contact'>wwakarchuk@ryerson.ca</p>s
-                        </div>
-                        <div class="col-md-4 col-xs-12">
-                            <h4>CONTACT</h4>
-                            <div class="contact"> 350 Victoria Street, Toronto, Ontario, Canada M5B 2K3</div>
-                            <p class='contact'>(416-979-5000 x3207)</p>
-
-                        </div>
+                                <h4>EMAIL</h4>
+                                <p class='contact'>Warren.Wakarchuk@ualberta.ca</p>
+                            </div>
+                            <div class="col-md-4 col-xs-12">
+                                <h4>CONTACT</h4>
+                                <div class="contact"> Centennial Centre for Interdisciplinary Science (CCIS) 5-185, Edmonton, Alberta
+                                        </div>
+                                <p class='contact'>(780 492-0587)</p>
+    
+                            </div>
                         <div class="col-md-4 col-xs-12">
                             <h4>MEDIA</h4>
                             <p id='twitter' class='contact'>
@@ -159,10 +160,10 @@
                     <div class="row">
 
                         <div class="crew-hover col-lg-6 col-md-6 col-xs-12 text-center mb-4 member red"
-                            style="display: block;">
+                            style="display: block">
                             <a href="teamRyerson.html">
                                 <h1> Ryerson Crew </h1>
-                                <img class="shadow img-fluid d-block mx-auto" src="images/Banner/Ryerson.jpg" alt="">
+                                <img class="img-fluid d-block mx-auto" style="width:auto" src="images/Banner/Ryerson.png" alt="">
                             </a>
                         </div>
 
@@ -170,7 +171,7 @@
                             style="display: block;">
                             <a href="teamAlberta.html">
                                 <h1> Alberta Crew </h1>
-                                <img class="shadow img-fluid d-block mx-auto" src="images/Banner/Alberta.jpg" alt="">
+                                <img class="img-fluid d-block mx-auto" style="width:auto"  src="images/Banner/Alberta.jpg" alt="">
                             </a>
                         </div>
                     </div>
