--- a/teamAlberta.html
+++ b/teamAlberta.html
@@ -119,12 +119,13 @@
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <h4>EMAIL</h4>
-                            <p class='contact'>wwakarchuk@ryerson.ca</p>s
+                            <p class='contact'>Warren.Wakarchuk@ualberta.ca</p>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <h4>CONTACT</h4>
-                            <div class="contact"> 350 Victoria Street, Toronto, Ontario, Canada M5B 2K3</div>
-                            <p class='contact'>(416-979-5000 x3207)</p>
+                            <div class="contact"> Centennial Centre for Interdisciplinary Science (CCIS) 5-185, Edmonton, Alberta
+                                    </div>
+                            <p class='contact'>(780 492-0587)</p>
 
                         </div>
                         <div class="col-md-4 col-xs-12">
@@ -162,9 +163,7 @@
                             <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia (link to AntonescuLab <a
-                                    style='color:black; border-bottom:1px solid black' href='http://antonesculab.com/index.html'
-                                    target='_blank'> here</a>), Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
                                 Laura, Aj, Nathan, Hirak, You. </p>
                         </div>
 
@@ -189,7 +188,9 @@
 
                                         Warren W. Wakarchuk
                                     </h3>
+                                    
                                     <p class='about'> Principal Investigator</p>
+                                 
 
                                     <p class='team-p'>Warren has been leading a glycobiology team since 1994. His
                                         expertise is in carbohydrate
@@ -197,7 +198,7 @@
                                         developing
                                         enzymes for the synthesis of bioactive molecules in vitro and in vivo. When not
                                         directing
-                                        the team he can found cooking or playing guitar. </p>
+                                        the team he can be found cooking or playing guitar. </p>
                                 </div>
                                 <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-2'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg" alt="">
@@ -318,77 +319,6 @@
 
                     </div>
 
-                    <div class="col-lg-12 col-md-12 col-xs-12">
-                        <div class="header">
-                            <h1 id='alumni' class="green" style='margin-bottom:1em;'>Alumni</h1>
-                        </div>
-                        <div class="container" style='color:black' id='writing'>
-                            <div class="row">
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Lynn D'Souza (Research assistant 2017-2018) </p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Laura Kell MSc (MSc 2016-2018) </p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Biprajit Sanyal BSc (MSc Candidate 2015-2018) </p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Dr. Bettina Janesch (Postdoctoral Fellow 2016-2018)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Dr. Ting Du (Postdoctoral Fellow 2016-2018)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Alison Mark (COOP student 2017)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Vika Bardahl (COOP student 2016)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Tina Papazatos (COOP student 2016)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Dr. Lyann Sim (Postdoctoral Fellow 2013-2015)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Andrea Caple (COOP student 2015)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Brian Lam (COOP student 2015)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Mahrin Aziz (COOP student 2015)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Alejandra Culebro (Visiting PhD student, University of Helsinki,
-                                        Dec 2014-Feb 2015)
-                                    </p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Tamara Erak (MSc Candidate 2014-2015)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Bryan Hsu (4th year thesis student)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Soheilali Karmali (Volunteer/summer student, Sep 2013-Aug 2014)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Marc de Asis (2011-2013 MSc, Waterloo)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Katrina Delos Santos (Research assistant, Sep 2013-Aug 2014) </p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Gary Chan (Summer student 2013)</p>
-                                </div>
-                                <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Liza Calhoun (COOP student 2013)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div id='gallery' class="col-lg-12 col-md-12 col-xs-12 text-center" style='color:white'>
                         <div class="header">
