--- a/teamRyerson.html
+++ b/teamRyerson.html
@@ -50,8 +50,8 @@
                     </span>
                     <span class='main'>
                         <span class='text'>
-                               Home 
-                        </span> 
+                            Home
+                        </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
                         </span>
@@ -72,8 +72,9 @@
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
         <div class="container" style='margin-bottom:5vh'>
 
-            <button id='button-collapse' class="navbar-toggler navbar-toggler-right" type="button" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button id='button-collapse' class="navbar-toggler navbar-toggler-right" type="button"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <!-- <div class="menu">
                             <span> MENU </span>
                         </div> -->
@@ -114,18 +115,20 @@
                                 <li class="nav-item">
                                     <a class="links" href="team.html">Team</a>
                                 </li>
-                                
+
 
                             </ul>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <h4>EMAIL</h4>
-                            <p class='contact'>wwakarchuk@ryerson.ca</p>s
+                            <p class='contact'>Warren.Wakarchuk@ualberta.ca</p>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <h4>CONTACT</h4>
-                            <div class="contact"> 350 Victoria Street, Toronto, Ontario, Canada M5B 2K3</div>
-                            <p class='contact'>(416-979-5000 x3207)</p>
+                            <div class="contact"> Centennial Centre for Interdisciplinary Science (CCIS) 5-185,
+                                Edmonton, Alberta
+                            </div>
+                            <p class='contact'>(780 492-0587)</p>
 
                         </div>
                         <div class="col-md-4 col-xs-12">
@@ -159,13 +162,13 @@
             <div class="container" style='margin-bottom:10em'>
                 <div class="row">
                     <div class="col-md-12">
-                        <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member" style='color:white'>
+                        <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member"
+                            style='color:white'>
                             <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia (link to AntonescuLab <a
-                                    style='color:black; border-bottom:1px solid black' href='http://antonesculab.com/index.html'
-                                    target='_blank'> here</a>), Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray,
+                                Nakita, Bettina, Tasnim, Warren,
                                 Laura, Aj, Nathan, Hirak, You. </p>
                         </div>
 
@@ -174,7 +177,7 @@
 
                     <div class="col-md-12">
                         <div class="header">
-                            <h1 class="red" style='margin-bottom:1em;' id='crew'>Ryerson    Crew</h1>
+                            <h1 class="red" style='margin-bottom:1em;' id='crew'>Ryerson Crew</h1>
                         </div>
 
                         <div class="container" id='content-main'>
@@ -185,7 +188,8 @@
 
 
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-1'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Warren 1.JPG" alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Warren 1.JPG"
+                                        alt="">
                                     <h3 class='header team-name'>
 
                                         Warren W. Wakarchuk
@@ -201,7 +205,8 @@
                                         the team he can found cooking or playing guitar. </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg" alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg"
+                                        alt="">
                                     <h3 class='header team-name'>
                                         Nakita Buenbrazo MSc
                                     </h3>
@@ -278,7 +283,8 @@
                                     </p>
                                 </div> -->
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-4'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Tasnim 1.jpg" alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Tasnim 1.jpg"
+                                        alt="">
                                     <h3 class='header team-name'>
                                         Tasnim Abukar BSc
                                     </h3>
@@ -292,7 +298,8 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-5'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia 1.JPG" alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia 1.JPG"
+                                        alt="">
                                     <h3 class='header team-name'>
                                         Sadia Rahmani BSc
                                     </h3>
@@ -373,7 +380,8 @@
                                     <p class='team-p'> Bryan Hsu (4th year thesis student)</p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Soheilali Karmali (Volunteer/summer student, Sep 2013-Aug 2014)</p>
+                                    <p class='team-p'> Soheilali Karmali (Volunteer/summer student, Sep 2013-Aug 2014)
+                                    </p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Marc de Asis (2011-2013 MSc, Waterloo)</p>
@@ -398,31 +406,38 @@
                         <div class="img-text">
                             <h1> <span> Click To View </span></h1>
                         </div>
-                        <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg" data-caption="Wakarchuk lab party 2018">
+                        <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg"
+                            data-caption="Wakarchuk lab party 2018">
                             <img src="images/Events/Wakarchuk lab party 2018.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Fasrah at OBD 2017.jpg" data-caption="Fasrah at OBD 2017">
+                        <a data-fancybox="gallery" href="images/Events/Fasrah at OBD 2017.jpg"
+                            data-caption="Fasrah at OBD 2017">
                             <img src="images/Events/Fasrah at OBD 2017.jpg">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/Hirak 2015.jpg" data-caption="Hirak 2015">
                             <img src="images/Events/Hirak 2015.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Lets not forget the socks.jpg" data-caption="Lets not forget the socks">
+                        <a data-fancybox="gallery" href="images/Events/Lets not forget the socks.jpg"
+                            data-caption="Lets not forget the socks">
                             <img src="images/Events/Lets not forget the socks.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Nakita 2015 presentation.JPG" data-caption="Nakita 2015 presentation">
+                        <a data-fancybox="gallery" href="images/Events/Nakita 2015 presentation.JPG"
+                            data-caption="Nakita 2015 presentation">
                             <img src="images/Events/Nakita 2015 presentation.JPG">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Sadia at GlycoNet 2018.jpg" data-caption="Sadia at GlycoNet 2018">
+                        <a data-fancybox="gallery" href="images/Events/Sadia at GlycoNet 2018.jpg"
+                            data-caption="Sadia at GlycoNet 2018">
                             <img src="images/Events/Sadia at GlycoNet 2018.jpg">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/Soheil 2014.jpg" data-caption="Soheil 2014">
                             <img src="images/Events/Soheil 2014.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Tasnim 2015 presentation.JPG" data-caption="Tasnim 2015 presentation">
+                        <a data-fancybox="gallery" href="images/Events/Tasnim 2015 presentation.JPG"
+                            data-caption="Tasnim 2015 presentation">
                             <img src="images/Events/Tasnim 2015 presentation.JPG">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg" data-caption="Warren and sialic acid 2016">
+                        <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg"
+                            data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/group 2014.jpeg" data-caption="group 2014">
@@ -462,7 +477,7 @@
             $('#gallery img, #gallery .img-text').on('mouseover', function () {
                 if ($('.img-text h1').css('color') != 'white') {
                     $('.img-text h1').toggleClass('scale2');
-                    
+
                 }
 
             });
