updated open page text, updated responsiveness of team page

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 
 
                     <p>
-                        The Wakarchuk lab is part of the <a class="red" href="http://canadianglycomics.ca/"> Canadian
-                            Glycomics </a> which
+                        The Wakarchuk lab is part of <a class="red" target="_blank" href="http://canadianglycomics.ca/"> Canadian
+                            Glycomics Network </a> which
                         is
                         Canadian research network dedicated to GlycoScience.
                     </p>
