--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
             </div>
         </div>
     </nav>
-    <section id='main'>
+    <section id='main' style="margin-bottom: 150px !important;">
         <div class="container">
             <div class="row">
 
