wakarchuk change fre for new members and new code of conduct

--- a/index.html
+++ b/index.html
@@ -62,41 +62,6 @@
             left: 50%;
             transform: translate(-50%, -50%);" src='images/Preloader/loading.gif'>
     </div>
-    <!-- <div id='announcement' class='newsOn'>
-        <div class="container"
-            style='font-size:1.5em; position:relative; top:50%; text-align:center; letter-spacing:1.5px'>
-
-            <h1> The Wakarchuk lab is relocating to the University of Alberta, May 2019. <br> We are looking for
-                students of all kinds! <a style="color:red" href="mailto:Warren.Wakarchuk@ualberta.ca"> PM @wakarchuk </a> for
-                details. </h1>
-            <h3 style='padding-top:2.5%;text-transform:uppercase;'> <span id='continue'
-                    style=' border-bottom:1px solid; cursor:pointer'> Continue to home? </span> </h3>
-            <div>
-                <span style='padding:0 2.5%;text-transform:uppercase;'> <a style="color:black" href="teamRyerson.html"
-                        class='breakingNewsLink' style=' border-bottom:1px solid; cursor:pointer'> See Ryerson Team?
-                    </a> </span>
-                <span style='padding:0 2.5%;text-transform:uppercase;'> <a style="color:black" href="teamAlberta.html"
-                        class='breakingNewsLink' style=' border-bottom:1px solid; cursor:pointer'> See U of Alberta
-                        Team? </a> </span>
-            </div>
-            <br><br><br>
-            <h3>
-                <a class="red" id="continueHome" href="#!">
-                    Continue Home
-                </a>
-
-            </h3>
-
-
-
-
-
-        </div>
-
-
-    </div> -->
-
-
 
     <div class='top-brand top-red' style='z-index:99;'>
         <h4> Wakarchuk Lab</h4>
@@ -133,6 +98,9 @@
         </h3>
         <br>
         <h4>We are a welcoming community who value diversity </h4>
+        <h3><a style="color:black;    font-size: 2rem;
+            font-style: italic;" target="__blank" href="codeOfConduct.pdf"> <span
+                    style="border-bottom:1px solid black"> "Code of Conduct" </span></a></h3>
         <h1 class="red">Glycobiology Lab</h1>
     </div>
 
@@ -267,7 +235,8 @@
 
 
                     <p>
-                        The Wakarchuk lab is part of <a class="red" target="_blank" href="http://canadianglycomics.ca/"> Canadian
+                        The Wakarchuk lab is part of <a class="red" target="_blank" href="http://canadianglycomics.ca/">
+                            Canadian
                             Glycomics Network </a> which
                         is
                         Canadian research network dedicated to GlycoScience.
