--- a/teamRyerson.html
+++ b/teamRyerson.html
@@ -164,12 +164,11 @@
                     <div class="col-md-12">
                         <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member"
                             style='color:white'>
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
+                            <img class="rounded-circle img-fluid d-block mx-auto"
+                                src="images_new/2019 Group shot Toronto.jpg" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray,
-                                Nakita, Bettina, Tasnim, Warren,
-                                Laura, Aj, Nathan, Hirak, You. </p>
+                            <p class='team-p'>Toronto team Fall 2019: (L to R) Alex, Sadia, Jazlyn, Tasnim </p>
                         </div>
 
                     </div>
@@ -188,8 +187,8 @@
 
 
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-1'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Warren 1.JPG"
-                                        alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto"
+                                        src="images_new/Warren GlycoNet.jpg" alt="">
                                     <h3 class='header team-name'>
 
                                         Warren W. Wakarchuk
@@ -204,7 +203,7 @@
                                         directing
                                         the team he can found cooking or playing guitar. </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
+                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
@@ -219,18 +218,6 @@
                                         a passion for teaching and has trained many of the Wakarchuk lab undergrad
                                         alumni!</p>
                                 </div>
-                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Laura 1.jpg" alt="">
-
-                                    <h3 class='header team-name'>
-                                        Laura Kell MSc
-                                    </h3>
-                                    <p class='about'> Technician </p>
-                                    <p class='team-p'>Laura has a background in microbiology and enzyme work from her MSc. Laura has been contributing
-                                        her expertise to the OGO project, where we are making therapeutic proteins with O-glycans,
-                                        as well the PST project where we are improving polysialyltransferases for tissue
-                                        engineering and therapeutic protein modification</p>
-                                </div> -->
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-3'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/AJ 1.jpg" alt="">
                                     <h3 class='header team-name'>
@@ -246,49 +233,14 @@
                                         an expression host for a variety of proteins of interest to the Wakarchuk lab.
                                         She
                                         is helping to develop new expression vectors for this work.</p>
-                                </div>
-                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/nicole.jpg" alt="">
-                                    <h3 class='header team-name'>
-                                        Nicole Thompson BSc
-                                    </h3>
-                                    <p class='about'> Technician </p>
-
-
-
-                                    </h2>
-                                    <p class='team-p'>Nicole is recent graduate of Waterloo University. She is working
-                                        on enzymatic modification
-                                        of glycopeptides, as well as characterizing the protein glycosylation performed
-                                        by
-                                        the synthetic OGO operons in E. coli. </p>
-                                </div>
-        
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-5'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Hirak 1.JPG" alt="">
-                                    <h3 class='header team-name'>
-                                        Hirak Saxena MSc
-                                    </h3>
-                                    <p class='about'> PhD Candidate </p>
-
-                                    <p class='team-p'>Hirak has taken on a lead role in unravelling the O-mannosylation
-                                        in Actinobacteria.
-                                        He is applying synthetic biology to studying the biochemistry of this process
-                                        in
-                                        the hope of working out if this modification is coupled to protein export, and
-                                        if
-                                        there is a communication component to the story. He has also been working on
-                                        the
-                                        in vitro remodelling of therapeutic protein glycans.
-                                    </p>
                                 </div> -->
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-4'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Tasnim 1.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
-                                        Tasnim Abukar BSc
+                                        Tasnim Abukar BSc MSc
                                     </h3>
-                                    <p class='about'>MSc Candidate </p>
+                                    <p class='about'>Technician</p>
 
                                     <p class='team-p'>Tasnim is working between the Wakarchuk and Koivisto labs. Her
                                         chemical biology expertise
@@ -297,13 +249,13 @@
                                         protein discovery and characterization.
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-5'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-3'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia 1.JPG"
                                         alt="">
                                     <h3 class='header team-name'>
                                         Sadia Rahmani BSc
                                     </h3>
-                                    <p class='about'>MSc Candidate </p>
+                                    <p class='about'>PhD Candidate </p>
 
                                     <p class='team-p'>Sadia is working between the Wakarchuk and Antonescu labs (link
                                         to Antonescu lab here).
@@ -312,6 +264,36 @@
                                         therapeutic proteins from the OGO project, as well studying how the O-GlcNAc
                                         modification
                                         is playing a role in regulation of clathrin mediated endocytosis.
+                                    </p>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-4'>
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/Jazlyn3.jpg"
+                                        alt="">
+                                    <h3 class='header team-name'>
+                                        Jazyln Borges
+                                    </h3>
+                                    <p class='about'>BSc candidate</p>
+
+                                    <p class='team-p'>Jazyln is an undergraduate re
+                                        searcher who brings a cell biology perspective to understanding how we
+                                        can use exogenous glycosyltransferase treatment to effect cellular behavior on
+                                        route to application for
+                                        cellular therapy for the repair of damaged tissue
+                                    </p>
+                                </div>
+
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-5'>
+                                    <img style="padding-top: 155px;" class="rounded-circle img-fluid d-block mx-auto"
+                                        src="images_new/NeuAc.png" alt="">
+                                    <h3 class='header team-name'>
+                                        Alex Aguilera BSc
+                                    </h3>
+                                    <p class='about'>Technician</p>
+
+                                    <p class='team-p'>Alex is a recent BSc graduate from Ryerson University. He is
+                                        working on the Plantform therapeutic protein modification project <a
+                                            style="color:black"
+                                            href="https://www.plantformcorp.com/file.aspx?id=2ed272ee-535d-45d3-9d50-ec46e532a919 ">(https://www.plantformcorp.com/file.aspx?id=2ed272ee-535d-45d3-9d50-ec46e532a919).</a>
                                     </p>
                                 </div>
 
@@ -332,6 +314,15 @@
                         </div>
                         <div class="container" style='color:black' id='writing'>
                             <div class="row">
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Ugbad Hassan BSc (Intern summer 2019) </p>
+                                </div>
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Nakita Buenbrazo MSc (Technician 2016-2019) </p>
+                                </div>
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Aju-Sue Francis MSc (Technician 2017-2019) </p>
+                                </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Lynn D'Souza (Research assistant 2017-2018) </p>
                                 </div>
@@ -406,10 +397,26 @@
                         <div class="img-text">
                             <h1> <span> Click To View </span></h1>
                         </div>
+                        <a data-fancybox="gallery" href="images/Group Picture.JPG"
+                            data-title="2018 Group"
+                            data-caption="March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren, Laura, Aj, Nathan, Hirak, You.">
+                            <img src="images/Group Picture.JPG">
+                        </a>
                         <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg"
                             data-caption="Wakarchuk lab party 2018">
+                            
                             <img src="images/Events/Wakarchuk lab party 2018.jpg">
                         </a>
+                        <a data-fancybox="gallery" href="images_new/GlycoNet dinner 2019.jpg"
+                            data-caption="GlycoNet Dinner 2019">
+                            <img src="images_new/GlycoNet dinner 2019.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images_new/Team at GlycoNet 2019.jpg"
+                            data-title="Team at GlycoNet 2019"
+                            data-caption="GlycoNet 2019: (L to R) Sadia, Lyann, Tasnim, Aj, Nicole, Warren (Hirak in front)">
+                            <img src="images_new/Team at GlycoNet 2019.jpg">
+                        </a>
+
                         <a data-fancybox="gallery" href="images/Events/Fasrah at OBD 2017.jpg"
                             data-caption="Fasrah at OBD 2017">
                             <img src="images/Events/Fasrah at OBD 2017.jpg">
@@ -440,7 +447,7 @@
                             data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/group 2014.jpeg" data-caption="group 2014">
+                        <a data-fancybox="gallery" href="images/Events/group 2014.jpeg" data-caption="December 2014: (L to R) Tamara, Alejandra, Nakita, Lyann, Warren, Bryan, Hirak, Soheil">
                             <img src="images/Events/group 2014.jpeg">
                         </a>
 
